--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
 {
-    "name": "binarykitten/zeffmudemo",
-    "description": "ZeffMu Demo Application",
-    "type": "Demo",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Kathryn Reeve",
-            "email": "Kathryn@BinaryKitten.com"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require": {
-        "binarykitten/zeffmu": "dev-master",
-        "zendframework/zend-debug": "2.*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^4.6"
+  "name": "binarykitten/zeffmudemo",
+  "description": "ZeffMu Demo Application",
+  "type": "Demo",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Kathryn Reeve",
+      "email": "Kathryn@BinaryKitten.com"
     }
+  ],
+  "minimum-stability": "stable",
+  "require": {
+    "binarykitten/zeffmu": "0.2.0",
+    "zendframework/zend-debug": "~2.5.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0|~5.0"
+  }
 }
